Fix overview scrolling on mobile (#427)
* Fix overview scrolling on mobile

* Alow wee bit of extra scroll

* Reduce wobble when scrolling

* try this ...

* try this

* maybe this?

* Add comment

* Can remove the extra scrolling then

--- a/timetagger/app/app.scss
+++ b/timetagger/app/app.scss
@@ -1,9 +1,11 @@
 body { background: $bg1; }
 body.darkmode { background: $bg3; }
 
+main div.content { padding: 0; }  /* prevent empty space at bottom on iPhone */
+
 #canvas {
     position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100vh;
+    top: 0; left: 0; width: 100%; height: 100%;
     border: 0; margin: 0; padding: 0; outline: none;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
     border-radius: 2px;
